src/test/deca/context/invalid/objet/method_notmethod.deca
// This identifier does not correspond to a method in this scope
// Description : Try to do a methodcall with an object which is not a method
// Result : error line 10



class A {
    int y;
    void m() {
        int x = y();
    }
}